changed one of the fields

--- a/templates/route.jinja2
+++ b/templates/route.jinja2
@@ -11,7 +11,7 @@
       {{route_stops[stop_id].station_name}} :
       {{route_stops[stop_id].oa_code}} :
       {{route_stops[stop_id].oa_totpop01}} :
-      {{route_stops[stop_id].oa_totpop11cd }} :
+      {{route_stops[stop_id].oa_totpop11}} :
   </li>
 {% endfor %}
 </ol>
